fixed an overflow in the third section

--- a/rayn-look/app/globals.css
+++ b/rayn-look/app/globals.css
@@ -20,7 +20,6 @@
 body {
   color: var(--foreground);
   background: #222222;
-  overflow-x: hidden;
 }
 
 h1,h2,h3,h4,h5{
